fixed profile cards font-size, border and aligning. Created new component for right profile cards.

--- a/src/app/component/user/profile/profile.component.scss
+++ b/src/app/component/user/profile/profile.component.scss
@@ -32,42 +32,6 @@ section {
       margin: 0 3% 0 3%;
     }
   }
-
-  .right-column {
-    height: 350px;
-
-    .right-cards {
-      .card {
-        height: auto;
-        color: white;
-        text-align: left;
-        padding: 16px 20px 0px 16px;
-        margin-top: 24px;
-
-        .cart-title {
-          font-family: 'Montserrat', sans-serif;
-          font-weight: bold;
-          font-size: 15px;
-        }
-
-        .card-description {
-          font-size: 13px;
-          font-family: 'Open Sans';
-        }
-
-        .shape-img {
-          img {
-            position: absolute;
-            bottom: -1px;
-            left: 0;
-            right: 0px;
-            width: 100%;
-            height: 60%;
-          }
-        }
-      }
-    }
-  }
 }
 
 @media (max-width: 768px) {
